# smc-lateral-controller

./: .gitignore  README.md
src/dummy_lateral_controller/: CMakeLists.txt  README.md  package.xml
src/dummy_lateral_controller/include/dummy_lateral_controller/: dummy_lateral_controller.hpp
src/dummy_lateral_controller/src/: dummy_lateral_controller.cpp
src/failure_injection/: CMakeLists.txt  package.xml
src/failure_injection/include/failure_injection/: failure_injection.hpp
src/failure_injection/src/: failure_injection.cpp  failure_injection_node.cpp
src/smc_lateral_controller/: CMakeLists.txt  README.md  package.xml
src/smc_lateral_controller/config/: smc_lateral_controller.param.yaml
src/smc_lateral_controller/data/: lyapunov_stability.ipynb  statistics.ipynb
src/smc_lateral_controller/include/smc_lateral_controller/: lowpass_filter.hpp  move_average_filter.hpp  smc.hpp  smc_lateral_controller.hpp  smc_utils.hpp
src/smc_lateral_controller/include/smc_lateral_controller/vehicle_model/: dynamic.hpp  interface.hpp  kinematic.hpp
src/smc_lateral_controller/src/: lowpass_filter.cpp  move_average_filter.cpp  smc.cpp  smc_lateral_controller.cpp  smc_utils.cpp
src/smc_lateral_controller/src/vehicle_model/: dynamic.cpp  interface.cpp  kinematic.cpp
src/trajectory_follower_node/: package.xml
src/trajectory_follower_node/include/trajectory_follower_node/: controller_node.hpp
src/trajectory_follower_node/src/: controller_node.cpp
