<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smc_lateral_controller</name>
  <version>0.1.0</version>
  <description>The smc_lateral_controller package</description>
  <maintainer email="jmatute@ncat.edu">Jose Matute</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>trajectory_follower_base</depend>
  <depend>vehicle_info_util</depend>
  <depend>eigen</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>eigen</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
